src/styles/_bases.css
@import url('https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap');

:root {
    --background: url(https://fondosmil.com/fondo/17021.jpg);
    --items: #1e2b44b8;
    --letter: #ffffff;
    --icons: #e36464;
    --shadow: 7px 7px 14px 0px rgb(0 0 0 / 15%);
    --header: #22314c;
    --other: #126f9d;
}

/*  */
::-webkit-scrollbar {
    width: 8px;
    height: 100%;
}

::-webkit-scrollbar-track {
    background: var(--header);
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: var(--icons);
    border-radius: 15px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555;
}

* {
    margin: 0;
    padding: 0;
    font-family: 'Mouse Memoirs', sans-serif;
    margin: 0;
    padding: 0;
    font-family: 'Mouse Memoirs', sans-serif;
    font-size: 25px;
    letter-spacing: 2px;
    color: var(--letter);
}

*::first-letter {
    text-transform: capitalize;
}

body {
    background: #21354d;
}

header {
    position: sticky;
    top: -1px;
    width: 100%;
    min-height: 6pc;
    z-index: 5;
    display: flex;
    justify-content: center;
    /* background: var(--header); */
    /* box-shadow: 0px 0px 10px rgb(0 0 0 / 53%); */
    transition: .5s;
}

header[data-small="true"] {
    background: var(--header);
    min-height: 3pc;
    box-shadow: 0px 0px 10px rgb(0 0 0 / 53%);
}

header nav {
    position: relative;
    width: 100%;
    height: 100%;
    display: flex;
    font-size: 30px;
    justify-content: center;
    align-items: center;
}


main {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-content: center;
    align-items: center;
    justify-content: flex-start;
    gap: 8pc;
}

main section {
    position: relative;
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-evenly;
    align-items: flex-start;
    z-index: 4;
}

main section:nth-child(1) {
    margin-top: 15pc;
    align-items: center;
}

main hr {
    width: 80%;
    border: 1px dashed var(--items);
}

footer {
    position: sticky;
    top: 100%;
    width: 100%;
    color: var(--letter);
    text-align: center;
    font-size: 18px;
    z-index: 5;
    background: var(--header);
    box-shadow: 0px 0px 8px rgb(97 92 151 / 11%);
    padding: 4px;
}

footer>a {
    font-size: 1em;
}


/* responsive */


@media screen and (max-width:1200px) {
    ::-webkit-scrollbar {
        width: 5px;
    }

    main section:nth-child(1) {
        flex-direction: column;
        margin-top: 10pc;
        gap: 4pc;
    }
}

